--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "purecss": "^0.6.0",
-    "react": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "react": "^15.3.2"
   },
   "devDependencies": {
     "babel-core": "~6.17.0",
