--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server",
     "build": "webpack",
+    "build-dev": "webpack --progress --colors --watch",
     "stats": "webpack --profile --json > stats.json"
   },
   "author": "wmoulin",
   "license": "ISC",
   "dependencies": {
-    "react": "^15.3.2"
+    "react": "^15.3.2",
+    "react-dom": "15.4.2"
   },
   "devDependencies": {
     "babel-core": "6.17.0",
@@ -25,8 +27,6 @@
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.22.0",
     "purifycss-webpack-plugin": "2.0.3",
-    "react": "15.4.2",
-    "react-dom": "15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
     "style-loader": "0.13.1",
     "webpack": "1.13.2",
